19 de abril de 2016 Edwin Hastamorir Modificacion de la página EmpleadoIndividual para que se puedan visualizar los íconos.

--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -169,7 +169,7 @@
 
                                         <!-- Botones Panel Central -->
 
-                                        <p:commandButton id="CargoDesempeñado" value="" style="position: absolute; background-image: url(Imagenes/Iconos/cargoDesempleñado.png); width: 40px; height: 40px; top: 5px; left: 5px; background-repeat: no-repeat; background-size: 100% 100%; border: outset; border-width: 0px;" action="vigenciasC"  disabled="#{controlRemoto.acumulado}" actionListener="#{controlVigenciasCargos.recibirEmpleado(controlRemoto.vwActualesTiposTrabajadoresesPosicion.empleado)}" 
+                                        <p:commandButton id="CargoDesempeñado" value="" style="position: absolute; background-image: url(Imagenes/Iconos/cargoDesempenado.png); width: 40px; height: 40px; top: 5px; left: 5px; background-repeat: no-repeat; background-size: 100% 100%; border: outset; border-width: 0px;" action="vigenciasC"  disabled="#{controlRemoto.acumulado}" actionListener="#{controlVigenciasCargos.recibirEmpleado(controlRemoto.vwActualesTiposTrabajadoresesPosicion.empleado)}" 
                                                          styleClass="bticon"/>
                                         <p:tooltip  for="CargoDesempeñado">
                                             #{msg['cargosdesempenados1']}<br/>#{msg['cargosdesempenados2']}
