--- a/DesignerRHN/DesignerRHN-war/web/emplvigsaludocupacional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigsaludocupacional.xhtml
@@ -11,35 +11,35 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Salud Ocupacional"  style=" position: absolute; width: 820px; height: 300px; left: 300px; top: 100px;text-align: left" >  
-                        <fieldset style="position: absolute; left: 10px; top: 90px; width: 780px; height: 165px; border-radius: 10px; ">   
+                    <p:panel  id="PanelTotal" header="Salud Ocupacional" styleClass="panelTotal" >  
+                        <fieldset style="position: absolute; left: 35px; top: 110px; width: 740px; height: 335px; border-radius: 10px; ">   
                         </fieldset>
-                        <h:outputText style="position: absolute; left: 15px; font-size: 14px" value="Bienvenido al Menú principal de Salud Ocupacional, a través de éstos módulos podrá llevar el registro de la Ficha clinica, Reportar accidentes de trabajo y Enfermadades Profesionales, ademas de llevar
+                        <h:outputText style="position: absolute; left: 25px; font-size: 16px" value="Bienvenido al Menú principal de Salud Ocupacional, a través de éstos módulos podrá llevar el registro de la Ficha clínica, Reportar accidentes de trabajo y Enfermadades Profesionales, ademas de llevar
                                       un control de dotaciones, servicios médicos y campañas de prevención" />
-                        <fieldset id="antecedentes" style="width: 308px; height: 55px; position: absolute; top: 100px;left: 20px;border-radius: 10px;">
+                        <fieldset id="antecedentes" style="width: 308px; height: 120px; position: absolute; top: 130px;left: 65px;border-radius: 10px;">
                             <legend style="font-size: 14px; color: blue"><strong>Antecedentes</strong></legend>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 10px" value="[Antecedentes...]"></p:commandButton>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 160px" value="[Consulta Médica...]"></p:commandButton>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Antecedentes"></p:commandButton>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 70px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Consulta Médica"></p:commandButton>
 
                         </fieldset>
-                        <fieldset id="accidentesEnfermedades" style="width: 415px; height: 55px; position: absolute;top: 100px ; left:360px;border-radius: 10px;">
+                        <fieldset id="accidentesEnfermedades" style="width: 308px; height: 120px; position: absolute;top: 130px ; left: 430px;border-radius: 10px;">
                             <legend style="font-size: 14px; color: blue"><strong>Accidentes y Enfermedades</strong></legend>
-                            <p:commandButton style="border-color:#045491; border-width: 2px;  position: absolute;top: 20px;left: 20px" value="[Reporte del Accidente...]" > </p:commandButton>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 215px" value="[Enfermedad Profesional...]"></p:commandButton>
+                            <p:commandButton style="border-color:#045491; border-width: 2px;  position: absolute;top: 25px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Reporte del Accidente"> </p:commandButton>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 80px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Enfermedad Profesional"></p:commandButton>
 
                         </fieldset>
-                        <fieldset id="chequeos" style="width: 308px; height: 55px; position: absolute; top: 180px;left: 20px;border-radius: 10px;">
-                            <legend style="font-size: 14px; color: blue"><strong>Antecedentes</strong></legend>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 80px" value="[Chequeos Médicos...]" ></p:commandButton>
+                        <fieldset id="chequeos" style="width: 308px; height: 120px; position: absolute; top: 295px;left: 65px;border-radius: 10px;">
+                            <legend style="font-size: 14px; color: blue"><strong>Chequeos</strong></legend>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 60px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Chequeos Médicos" ></p:commandButton>
 
                         </fieldset>
-                        <fieldset id="dotacionesServiciones" style="width: 415px; height: 55px; position: absolute;top: 180px ; left:360px;border-radius: 10px;">
-                            <legend style="font-size: 14px; color: blue"><strong>Dotaciones y otros Serviciones</strong></legend>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 100px" value="[Dotaciones]" ></p:commandButton>
-                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 235px" value="[Servicios]" ></p:commandButton>
+                        <fieldset id="dotacionesServiciones" style="width: 308px; height: 120px; position: absolute;top: 295px ; left: 430px;border-radius: 10px;">
+                            <legend style="font-size: 14px; color: blue"><strong>Dotaciones y otros Servicios</strong></legend>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 25px;left: 50px; height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Dotaciones" ></p:commandButton>
+                            <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 80px;left: 50px;height: 35px; width: 220px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;" value="Servicios" ></p:commandButton>
 
                         </fieldset>
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 270px;left: 740px" value="Atras" action="atrasemplvigsaludocupacional" ></p:commandButton>
+                        <p:commandButton style="position: absolute;top: 470px;left: 710px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" value="" action="atrasemplvigsaludocupacional" ></p:commandButton>
 
                     </p:panel>
                 </h:form>
