--- a/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
@@ -27,7 +27,7 @@
 
                                 <p:separator style="position: relative; top: -9px"/>
 
-                                <p:commandButton id="listaValores" value="" style="background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px " actionListener="#{controlVigenciasContratos.listaValoresBoton()}" process="@this"/>
+                                <p:commandButton disabled="#{controlVigenciasContratos.activarLOV}" id="listaValores" value="" style="background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px " actionListener="#{controlVigenciasContratos.listaValoresBoton()}" process="@this"/>
                                 <p:tooltip  for="listaValores" value="#{msg['lista']}" />
 
                                 <p:commandButton id="filtrar" value="" style="background-image: url(Imagenes/Iconos/embudo.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px " actionListener="#{controlVigenciasContratos.activarCtrlF11()}" process="@this"/>
@@ -273,7 +273,7 @@
                     <p:dialog id="confirmarRastro" header="#{msg['informacion']}" widgetVar="confirmarRastro"  resizable="false" draggable="false" modal="true" height="95" width="350px"  closable="false">  
                         <h:graphicImage value="Imagenes/Iconos/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['confirmarRastro']}" style="position: absolute; left: 70px; top: 15px; width: 250px; font-weight:bold; text-align: center" />
-                        <p:commandButton icon="ui-icon-check" value="#{msg['si']}" onclick="confirmarRastro.hide();" style="position: relative; top: 60px; left: 185px" action="rastro" 
+                        <p:commandButton icon="ui-icon-check" value="#{msg['si']}" onclick="confirmarRastro.hide();" style="position: relative; top: 60px; left: 185px" action="rastro" oncomplete="#{controlVigenciasContratos.anularLOV()}" 
                                          actionListener="#{controlRastro.recibirDatosTabla(controlVigenciasContratos.vigenciaSeleccionada.secuencia, 'VigenciasContratos', 'vigenciasContratos')}" process="@this" />
                         <p:commandButton icon="ui-icon-close" value="#{msg['no']}" onclick="confirmarRastro.hide();" style="position: relative; top: 60px; left: 190px" process="@this" />
                     </p:dialog>
@@ -282,7 +282,7 @@
                         <h:graphicImage value="Imagenes/Iconos/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['confirmarRastroHistorico']}" style="position: absolute; left: 70px; top: 15px; width: 250px; font-weight:bold; text-align: center" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['si']}" onclick="confirmarRastroHistorico.hide();" actionListener="#{controlRastro.historicosTabla('VigenciasContratos', 'vigenciasContratos')}" 
-                                         style="position: relative; top: 60px; left: 185px" action="rastro" process="@this" />
+                                         style="position: relative; top: 60px; left: 185px" action="rastro" oncomplete="#{controlVigenciasContratos.anularLOV()}" process="@this" />
                         <p:commandButton icon="ui-icon-close" value="#{msg['no']}" onclick="confirmarRastroHistorico.hide();" 
                                          style="position: relative; top: 60px; left: 190px" process="@this" />
                     </p:dialog>
